hphp/hack/test/typecheck/constraints/tparam_constrained_class_method_bad.php.exp
File "tparam_constrained_class_method_bad.php", line 6, characters 7-18:
Could not find static method doesNotExist in type C (Typing[4090])
  File "tparam_constrained_class_method_bad.php", line 3, characters 7-7:
  Declaration of C is here
